# Fertilizer_Quality_Control

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  setup.sh  todo.txt
NPK_training/: pyproject.toml
NPK_training/training/: config.py  regression_trainer.py  unet_trainer.py
backend/: Dockerfile  app.py  docker-compose.yml  history.py  pyproject.toml  requirements.txt  wsgi.py
backend/models/: regression_model.pkl
backend/src/soil_segment/: __init__.py  config.py  inference.py  model.py  npk_predictor.py
backend/src/soil_segment/api/: __init__.py  app.py
backend/src/soil_segment/storage/: __init__.py  history.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: style.css
frontend/src/components/: ImageUpload.vue  LoadingSpinner.vue  ResultDisplay.vue
test/: test_model_predictions.py
training/: README.md  __init__.py
training/interface/: __init__.py  training_server.py  training_ui.html
training/src/: __init__.py  config.py  regression_trainer.py  unet_trainer.py
