[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soil-segment"
version = "0.1.0"
description = "2D soil segmentation and NPK prediction (backend)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Fertilizer QC Team" }
]
dependencies = [
  "flask",
  "flask-cors",
  "numpy<2.3.0",
  "Pillow",
  "torch",
  "scikit-learn==1.7.2",
  "joblib",
  "openpyxl",
  "tomli; python_version < \"3.11\"",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "backend/src"}

[tool.setuptools.packages.find]
where = ["backend/src"]
include = ["soil_segment*"]
