[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soil-segment"
version = "0.1.0"
description = "2D soil segmentation and NPK prediction (backend)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Fertilizer QC Team" }
]
dependencies = [
  "flask",
  "flask-cors",
  "numpy<2.3.0",
  "Pillow",
  "torch",
  "scikit-learn==1.7.2",
  "joblib",
  "openpyxl",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
onnx = [
  "onnx",
  "onnxruntime",
]
training = [
  "fastapi",
  "matplotlib",
  "opencv-python",
  "python-multipart",
  "seaborn",
  "tomli; python_version < \"3.11\"",
  "torchvision",
  "tqdm",
  "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "backend/src"}

[tool.setuptools.packages.find]
where = ["backend/src"]
include = ["soil_segment*"]

[tool.soil_segment_training]
unet_dataset = "training/datasets/Unet_dataset"
regression_dataset = "training/datasets/Regression_dataset"
checkpoints_dir = "training/trained_models"
